# miniprojekti

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  run_robot_tests.sh  site.db  tapaaminen_muistiinpanot.md
.github/workflows/: main.yml
doc/: architecture.puml  asiakastapaaminen_231127.md  asiakastapaaminen_231204.md  raportti.md  retro.md  use case.puml  use_case.puml
src/: AppLibrary.py  app.py  config.py  db_connection.py  download_button.html  methods.py  routes.py  schema.sql  validators.py
src/instance/: site.db
src/outputs/: references.bib
src/templates/: confirmdelete.html  error.html  index.html  keylist.html  keyview.html  post.html  postarticle.html  postbook.html  postmaster.html  postmasterthesis.html  postphdthesis.html  reference_list.html
src/tests/: add_ref.robot  converter.robot  delete_ref.robot  dl_ref.robot  edit_ref.robot  filter_ref.robot  methods_test.py  resource.robot  sort_ref.robot
