[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["viljavai <vilja.vaisanen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
robotframework = "^6.1.1"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
