[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["viljavai <vilja.vaisanen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
robotframework = "^6.1.1"
coverage = "^7.3.2"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
selenium = "^4.15.2"
robotframework-seleniumlibrary = "^6.1.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
